# rtmp_pusher

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/zmy/rtmp_pusher/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/zmy/rtmp_pusher/: CameraXCapture.java  EncodeSurfaceProvider.java  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/zmy/rtmp_pusher/: ExampleUnitTest.kt
camerax_capture/: build.gradle
camerax_capture/src/androidTest/java/com/zmy/rtmp_pusher/capture/camerax_capture/: ExampleInstrumentedTest.java
camerax_capture/src/main/: AndroidManifest.xml
camerax_capture/src/main/java/com/zmy/rtmp_pusher/capture/camerax_capture/: CameraXCapture.java
camerax_capture/src/test/java/com/zmy/rtmp_pusher/capture/camerax_capture/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
pusher/: build.gradle
pusher/src/androidTest/java/com/zmy/rtmp_pusher/lib/: ExampleInstrumentedTest.java
pusher/src/main/: AndroidManifest.xml
pusher/src/main/cpp/: CMakeLists.txt  NativeLogger.cpp  NativeLogger.h  RtmpPacket.cpp  RtmpPacket.h  RtmpPusher.cpp  RtmpPusher.h  jni_env_ptr.cpp  jni_env_ptr.h  main.cpp
pusher/src/main/java/com/zmy/rtmp_pusher/lib/: RtmpCallback.java  RtmpPusher.java
pusher/src/main/java/com/zmy/rtmp_pusher/lib/audio_capture/: AudioCapture.java  (+2 more)
pusher/src/test/java/com/zmy/rtmp_pusher/lib/: ExampleUnitTest.java
(+32 files in other folders)
